--- a/about.html
+++ b/about.html
@@ -1,5 +1,8 @@
 ﻿<html>
+<head>
+<title> About Me </title>
+</head>
 <body>
-<h1>MohammedOm - </h1>
+<h1> Hi , about me page </h1>
 </body>
 </html>
